Bug 141935 - UI Synchronize UI to new line styles with rounded line caps
Summary: UI Synchronize UI to new line styles with rounded line caps
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: 141933
  Show dependency treegraph
 
Reported: 2021-04-27 13:17 UTC by NISZ LibreOffice Team
Modified: 2021-05-05 11:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: 141933


Attachments
attachment 171452 + Line dialog after compiling the proposed patch (48.24 KB, image/png)
2021-04-27 13:17 UTC, NISZ LibreOffice Team
Details
The Line dialog after changing the line style to a non-rounded one. (47.66 KB, image/png)
2021-04-27 13:18 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-04-27 13:17:21 UTC
Created attachment 171455 [details]
attachment 171452 [details] + Line dialog after compiling the proposed patch

This is a followup to bug #141933 
The new line styles added in the proposed patch ( https://gerrit.libreoffice.org/c/core/+/114459) contain line cap setting too. 
When selected in the Line dialog the Cap style dropdown does not change, but it should because the new line styles also contain the cap style.

Steps to reproduce:
    1. Open attachment 171452 [details] once bug 141933 is solved
    2. Select one of the lines and Format – Text Box and Shape – Line 
    3. Select another line style without (Rounded) name, then select one with (Rounded) name

Actual results:
The Cap style dropdown does not change when a line style is selected.

Expected results:
The Cap style dropdown should change to Flat when a line style without (Rounded) in the name is selected, and to Round when a line styles with (Rounded) is selected.
Comment 1 NISZ LibreOffice Team 2021-04-27 13:18:04 UTC
Created attachment 171456 [details]
The Line dialog after changing the line style to a non-rounded one.
Comment 2 Heiko Tietze 2021-04-29 09:19:27 UTC
Yes, the cap style dropdown should reflect the line style setting. Don't see need for input from UX.
Comment 3 Commit Notification 2021-05-05 11:49:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/134fb0fdecb898b1568f57e8c9dc8c3528b0d1e0

tdf#141935 svx cui: apply line cap setting of line styles

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2021-05-05 11:52:13 UTC
tdf#141935 svx cui: apply line cap setting of line styles

Only line dash pattern of the selected line style
was applied on the selected line or shape using the
1) Line Style popup menu of Drawing toolbar and
sidebar pane Properties and 2) Style popup menu
of Line pane of Line setting dialog window.

Now both line dash and line cap settings are applied,
supporting the usage of the new "rounded" preset
styles and the old not "rounded" versions.

Follow-up to commit b9b2c6a98fec798fc0ec76ec3cd407724f19dcac
"tdf#141933 add preset dash styles with round cap".