tdf#141935 svx cui: apply also line cap setting of a line style

Only line dash setting of the selected line style
was applied on the selected line or shape using the
1) Line Style popup menu of Drawing toolbar and
sidebar pane Properties and 2) Style popup menu
of Line pane of Line setting dialog window.

Now both line dash and line cap settings are applied,
supporting the usage of the new "rounded" preset
styles and the old not "rounded" versions.

Change-Id: Ib3f64afcdcb50545166d40476a03a4b45f7d0b8a